# help_me_script

./: README.md  chat_bot_ai.py  eximle.env  help_me.py  main.py  pyproject.toml  requirements.txt  screenshot.py  test_coords.py
core/: base_chatbot.py  my_logger.py  settings.py
input_processing/: screenshot.py  voice_recording.py
input_processing/file_local/: folder_combiner.py
input_processing/util/: get_text_in_scrin.py
modelAI/: chat_sber.py  proxi_api_chat_bot.py  yandex_gpt.py
prompt/: gigachat.yaml
